// Vitest Snapshot v1

exports[`<OTUForm /> > should render 1`] = `
<form
  onSubmit={[MockFunction spy]}
>
  <Styled(ModalBody)>
    <InputGroup>
      <InputLabel>
        Name
      </InputLabel>
      <Input
        error=""
        name="name"
        onChange={[MockFunction spy]}
        value="test"
      />
      <InputError />
    </InputGroup>
    <InputGroup>
      <InputLabel>
        Abbreviation
      </InputLabel>
      <Input
        name="abbreviation"
        onChange={[MockFunction spy]}
        value="T"
      />
    </InputGroup>
  </Styled(ModalBody)>
  <ModalFooter>
    <SaveButton />
  </ModalFooter>
</form>
`;

exports[`<OTUForm /> > should render with error 1`] = `
<form
  onSubmit={[MockFunction spy]}
>
  <Styled(ModalBody)>
    <InputGroup>
      <InputLabel>
        Name
      </InputLabel>
      <Input
        error="Name is used already"
        name="name"
        onChange={[MockFunction spy]}
        value="test"
      />
      <InputError>
        Name is used already
      </InputError>
    </InputGroup>
    <InputGroup>
      <InputLabel>
        Abbreviation
      </InputLabel>
      <Input
        name="abbreviation"
        onChange={[MockFunction spy]}
        value="T"
      />
    </InputGroup>
  </Styled(ModalBody)>
  <ModalFooter>
    <SaveButton />
  </ModalFooter>
</form>
`;
